infrastructure/config/wbyc-website/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wbyc-website
  labels:
    app.kubernetes.io/name: wbyc-website
    app.kubernetes.io/component: website
